codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__agents_navigation_help.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  / 输入命令                         ! 输入 Shell 命令                          " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (40, " "), (42, " "), (51, " "), (53, " ")]
"  ctrl + j 插入换行                  tab 提交消息                               " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
"  @ 插入文件路径                     ctrl + v 粘贴图片                          " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (47, " "), (49, " "), (51, " "), (53, " ")]
"  ctrl + g 在外部编辑器中编辑        esc esc 编辑上一条消息                     " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " ")]
"  ctrl + r 搜索历史                  ctrl + c 退出                              " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (47, " "), (49, " ")]
"  ⌥ + , 降低推理强度                 ⌥ + . 提高推理强度                         " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " ")]
"  ctrl + t 查看对话记录                                                         " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"  ← 查看智能体（输入框为空时）                                                  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"                                                                                "
"  使用以下命令自定义快捷键：/keymap                                             " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " ")]
