codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__light_terminal_palette_composer.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 6 },
    content: [
        "                                                ",
        "› Ask Codex to do anything                      ",
        "                                                ",
        "                                                ",
        "                                                ",
        "  ? 查看快捷键                 上下文剩余 100%  ", // hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Rgb(244, 244, 244), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Rgb(244, 244, 244), underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Rgb(244, 244, 244), underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Rgb(244, 244, 244), underline: Reset, modifier: DIM,
        x: 26, y: 1, fg: Reset, bg: Rgb(244, 244, 244), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 32, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 36, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
